Pass exivData as argument to avoid crash in exiv2 library

This should fix the bug reported at https://github.com/Exiv2/exiv2/issues/2649.

Exiv2 will be made more robust against this, but this commit should get
Gwenview unstuck in the meantime.

BUG: 470880
FIXED-IN: 23.04.1


(cherry picked from commit d2869e825a565d44e06f461058c60a4483af274e)